--- a/wisccc/templates/wisccc/survey_section_6_field_seeding_cost.html
+++ b/wisccc/templates/wisccc/survey_section_6_field_seeding_cost.html
@@ -17,16 +17,16 @@
   {% csrf_token %}
 
 
-  {% include 'wisccc/includes/survey_2024/form_section_6_seeding_cost_surveyfield.html' %}
-  {% include 'wisccc/includes/survey_2024/form_section_6_seeding_cost_surveyfarm.html' %}
+  {% include form_file_name_surveyfield %}
+  {% include form_file_name_surveyfarm %}
 
 
   <button type="submit" class="noprompt-required btn btn-primary">Submit</button>
-  <a href="{% url 'wisc_cc_survey' %}?farmer_id={{ farmer_id }}"><button type="button" class="btn btn-secondary">Back to
-      survey home
-      page</button></a>
-
-
+  <a href="{% url 'wisc_cc_survey' survey_year %}?farmer_id={{ farmer_id }}">
+    <button type="button" class="btn btn-secondary">
+      Back to survey home page
+    </button>
+  </a>
 </form>
 
 {% endblock %}
