--- a/wisccc/templates/wisccc/survey_section_5_field_tillage_manure_soil.html
+++ b/wisccc/templates/wisccc/survey_section_5_field_tillage_manure_soil.html
@@ -17,15 +17,16 @@
   {% csrf_token %}
 
 
-  {% include 'wisccc/includes/survey_2024/form_section_5_tillage_manure_soil_surveyfield.html' %}
+  {% include form_file_name_surveyfield %}
 
 
 
   <button type="submit" class="noprompt-required btn btn-primary">Submit</button>
-  <a href="{% url 'wisc_cc_survey' %}?farmer_id={{ farmer_id }}"><button type="button" class="btn btn-secondary">Back to
-      survey home
-      page</button></a>
-
+  <a href="{% url 'wisc_cc_survey' survey_year %}?farmer_id={{ farmer_id }}">
+    <button type="button" class="btn btn-secondary">
+      Back to survey home page
+    </button>
+  </a>
 
 </form>
 
