--- a/wisccc/templates/wisccc/includes/survey_2025/form_section_4_planting_dates_timing_surveyfarm.html
+++ b/wisccc/templates/wisccc/includes/survey_2025/form_section_4_planting_dates_timing_surveyfarm.html
@@ -1,7 +1,1 @@
-{% load crispy_forms_tags %}
-
-<div class="form-row">
-    <div class="form-group col-md-5 mb-0">
-        {{ form_surveyfarm_section_4.cover_crops_delay_cash_crop|as_crispy_field }}
-    </div>
-</div>
+<!-- This form intentionally left blank for backwards compatibililty. -->
