--- a/wisccc/templates/wisccc/includes/survey_2025/form_section_5_tillage_manure_soil_surveyfield.html
+++ b/wisccc/templates/wisccc/includes/survey_2025/form_section_5_tillage_manure_soil_surveyfield.html
@@ -17,6 +17,17 @@
     </div>
     <div class="form-row">
         <div class="form-group col-md-5 mb-0">
+            {{ form_surveyfield_section_5.manure_prior_source|as_crispy_field }}
+        </div>
+        <div class="form-group col-md-5 mb-0">
+            {{ form_surveyfield_section_5.manure_prior_consistency|as_crispy_field }}
+        </div>
+    </div>
+
+    <br>
+
+    <div class="form-row">
+        <div class="form-group col-md-5 mb-0">
             {{ form_surveyfield_section_5.manure_post|as_crispy_field }}
         </div>
         <div class="form-group col-md-4 mb-0">
@@ -26,6 +37,26 @@
             {{ form_surveyfield_section_5.manure_post_rate_units|as_crispy_field }}
         </div>
     </div>
+    <div class="form-row">
+        <div class="form-group col-md-5 mb-0">
+            {{ form_surveyfield_section_5.manure_post_source|as_crispy_field }}
+        </div>
+        <div class="form-group col-md-5 mb-0">
+            {{ form_surveyfield_section_5.manure_post_consistency|as_crispy_field }}
+        </div>
+    </div>
+
+
+    <div class="form-row">
+        <div class="form-group col-md-10 mb-0">
+            {{ form_surveyfield_section_5.synth_fert_for_covers|as_crispy_field }}
+        </div>
+        <div class="form-group col-md-10 mb-0">
+            {{ form_surveyfield_section_5.synth_fert_for_covers_application_date|as_crispy_field }}
+        </div>
+
+    </div>
+
 
 
     <div class="form-row">
@@ -55,6 +86,8 @@
         <div class="form-group col-md-6 mb-0">
             {{ form_surveyfield_section_5.dominant_soil_texture|as_crispy_field }}
         </div>
+    </div>
+    <div class="form-row">
         <div class="form-group col-md-6 mb-0">
             {{ form_surveyfield_section_5.soil_conditions_at_cover_crop_seeding|as_crispy_field }}
         </div>
@@ -63,3 +96,14 @@
 
 
 </div>
+
+<script>
+    $(function () {
+        $("#id_synth_fert_for_covers_application_date").datepicker({
+            format: 'yyyy-mm-dd',
+        });
+    });
+
+
+
+</script>
