updated section 6; corrected typo in section 4 form template

--- a/wisccc/templates/wisccc/includes/survey_2025/form_section_6_seeding_cost_surveyfield.html
+++ b/wisccc/templates/wisccc/includes/survey_2025/form_section_6_seeding_cost_surveyfield.html
@@ -13,6 +13,9 @@
         <div class="form-group col-md-12 mb-0">
             {{ form_surveyfield_section_6.cover_crop_seeding_method_write_in|as_crispy_field }}
         </div>
+        <div class="form-group col-md-12 mb-0">
+            {{ form_surveyfield_section_6.cover_crop_seeding_method_drone|as_crispy_field }}
+        </div>
     </div>
 
     <div class="form-row">
