--- a/wisccc/templates/wisccc/survey_section_4_field_planting_dates_timing.html
+++ b/wisccc/templates/wisccc/survey_section_4_field_planting_dates_timing.html
@@ -17,7 +17,7 @@
   {% csrf_token %}
 
   {% include form_file_name_surveyfield_part_1 %}
-  {% include form_file_name_surveyfarm.html %}
+  {% include form_file_name_surveyfarm %}
   {% include form_file_name_surveyfield_part_2 %}
 
 
