fixed a missing survey year for 7; finished questions for section 7

--- a/wisccc/templates/wisccc/includes/survey_2025/form_section_7_final_thoughts_surveyfarm.html
+++ b/wisccc/templates/wisccc/includes/survey_2025/form_section_7_final_thoughts_surveyfarm.html
@@ -2,21 +2,65 @@
 
 <div class="form-row">
     <div class="form-group col-md-12 mb-0">
-        {{ form_surveyfarm_section_7.encourage_cc|as_crispy_field }}
+        {{ form_surveyfarm_section_7.learn_about_other_farmers_cc|as_crispy_field }}
     </div>
 </div>
 <div class="form-row">
     <div class="form-group col-md-12 mb-0">
-        {{ form_surveyfarm_section_7.encourage_cc_write_in|as_crispy_field }}
+        {{ form_surveyfarm_section_7.learn_about_cc_preferred_way|as_crispy_field }}
     </div>
 </div>
 
 <div>
     <div class="form-row">
         <div class="form-group col-md-12 mb-0">
-            {{ form_surveyfarm_section_7.additional_thoughts|as_crispy_field }}
+            {{ form_surveyfarm_section_7.what_info_other_farmers_most_useful|as_crispy_field }}
         </div>
     </div>
 </div>
 
+
+
+<div>
+    <div class="form-row">
+        <div class="form-group col-md-12 mb-0">
+            {{ form_surveyfarm_section_7.scenario_tool_feedback|as_crispy_field }}
+        </div>
+    </div>
+</div>
+<div>
+    <div class="form-row">
+        <div class="form-group col-md-12 mb-0">
+            {{ form_surveyfarm_section_7.scenario_tool_easy_to_use|as_crispy_field }}
+        </div>
+    </div>
+</div>
+<div>
+    <div class="form-row">
+        <div class="form-group col-md-12 mb-0">
+            {{ form_surveyfarm_section_7.scenario_tool_return_to_tool|as_crispy_field }}
+        </div>
+    </div>
+</div>
+<div>
+    <div class="form-row">
+        <div class="form-group col-md-12 mb-0">
+            {{ form_surveyfarm_section_7.scenario_tool_lacking_info|as_crispy_field }}
+        </div>
+    </div>
+</div>
+<div>
+    <div class="form-row">
+        <div class="form-group col-md-12 mb-0">
+            {{ form_surveyfarm_section_7.testimonial|as_crispy_field }}
+        </div>
+    </div>
+</div>
+<div>
+    <div class="form-row">
+        <div class="form-group col-md-12 mb-0">
+            {{ form_surveyfarm_section_7.willing_to_share_more|as_crispy_field }}
+        </div>
+    </div>
+</div>
 {{ form_surveyfarm_section_7.errors}}
