--- a/wisccc/templates/wisccc/wisc_cc_survey.html
+++ b/wisccc/templates/wisccc/wisc_cc_survey.html
@@ -32,7 +32,7 @@
         {% else %}
 
         <p>
-          Welcome to the fifth season of our cover crop citizen science project.
+          Welcome to the sixth season of our cover crop citizen science project.
           You are part of a state-wide collaborative effort to build practical knowledge about cover cropping in
           Wisconsin.
           You're also helping improve tools like SnapPlus and developing better
@@ -41,7 +41,8 @@
 
         <p>
           We will be in touch to be sure the biomass sampling is going ok, and to share other project info. Also, check
-          out the <a href="{% url 'wisc_cc_graph' %}">map and graph</a> of the data we've collected so far!
+          out the <a href="{% url 'wisc_cc_scenario' %}">scenario tool</a>, created with the data we've collected so
+          far!
         </p>
         <p>Please contact Mrill Ingram <a href="mailto:mingram@wisc.edu">(mingram@wisc.edu)</a>
           or Dan Marzu <a href="mailto:dan.marzu@wisc.edu">(dan.marzu@wisc.edu)</a> with any questions</p>
