opening survey from registration confirmation page

--- a/wisccc/templates/wisccc/wisc_cc_register_3.html
+++ b/wisccc/templates/wisccc/wisc_cc_register_3.html
@@ -20,7 +20,7 @@
 
                 <p class="card-text">
                     Welcome! Thank you for joining the Wisconsin Cover Crop Data Network.
-                    The survey will be open soon.
+                    Please continue on to the survey whenever is convenient.
                     We will be in touch soon with more information on the survey and cover crop sampling.
                     Please reach out to
                     <a href="mailto:dan.marzu@wisc.edu">
@@ -32,11 +32,11 @@
                     </a>
                     with any questions.
                 </p>
-                <!-- <a href="{% url 'wisc_cc_survey' %}">
+                <a href="{% url 'wisc_cc_survey' %}">
                     <button type="button" class="noprompt-required btn btn-primary">
                         Start survey
                     </button>
-                </a> -->
+                </a>
                 <a href="{% url 'wisc_cc_home' %}">
                     <button type="button" class="noprompt-required btn btn-primary">
                         Return to Homepage
