--- a/wisccc/templates/wisccc/survey_section_1_farmer.html
+++ b/wisccc/templates/wisccc/survey_section_1_farmer.html
@@ -23,7 +23,7 @@
   {% include 'wisccc/includes/form_farmer.html' %}
 
   <button type="submit" class="noprompt-required btn btn-primary">Submit</button>
-  <a href="{% url 'wisc_cc_survey' %}?farmer_id={{ farmer_id }}"><button type="button"
+  <a href="{% url 'wisc_cc_survey' survey_year %}?farmer_id={{ farmer_id }}"><button type="button"
       class="warn btn btn-secondary">Back to survey
       home
       page</button></a>
