changed header to look more like michael fields page; removed footer

--- a/static/css/wisccc.css
+++ b/static/css/wisccc.css
@@ -1,5 +1,6 @@
 body {
-  background-image: url(../img/beige_backaround.png);
+  /* background-image: url(../img/beige_backaround.png); */
+  background-color: #C5D8CD;
 }
 
 /* .logo {
