--- a/wisccc/templates/wisccc/wisc_cc_map.html
+++ b/wisccc/templates/wisccc/wisc_cc_map.html
@@ -175,8 +175,13 @@
     }
 </style>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="{% url 'wisc_cc_home' %}">Wisconsin Cover Crop Data Network</a>
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #8BB19C;">
+    <a class=" navbar-brand" href="https://www.michaelfields.org/covercrops">
+
+        <!-- <img height="50" src="{% static 'img/2025LogoBlackLetters.png' %}" /> -->
+        <img height="50" src="{% static 'img/cultivating resilience since 1984-5.png' %}" />
+        WI Cover Crop Data Network
+    </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
         aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
