closing registration for 2025

--- a/wisccc/templates/wisccc/wisc_cc_home.html
+++ b/wisccc/templates/wisccc/wisc_cc_home.html
@@ -62,12 +62,12 @@
             <div class="card-body">
               <h5 class="card-title">Survey for 2025</h5>
               <p class="card-text">
-                Registration is open 2025-6.
-                Register here by clicking or email <a href="mailto:mingram@wisc.edu">Mrill Ingram</a>
-                if you have further questions
+                Registration is closed for the 2025-6 season.
+                If you are interested in particlipating in the project or learning more about the project,
+                please click below.
               </p>
-
-              <a href="{% url 'wisc_cc_register_1' %}" class="btn btn-primary">Register?</a>
+              <a href="{% url 'wisc_cc_interested' %}" class="btn btn-primary">Interested?</a>
+              <!-- <a href="{% url 'wisc_cc_register_1' %}" class="btn btn-primary">Register?</a> -->
             </div>
           </div>
           <!-- </a> -->
