--- a/wisccc/templates/wisccc/includes/survey_2025/form_section_3_rotation_rates_fieldfarm.html
+++ b/wisccc/templates/wisccc/includes/survey_2025/form_section_3_rotation_rates_fieldfarm.html
@@ -1,11 +1,11 @@
 {% load crispy_forms_tags %}
 
 
-<!-- <div class="form-row">
+<div class="form-row">
     <div class="form-group col-md-4 mb-0">
         {{ form_fieldfarm_section_3.field_name|as_crispy_field }}
     </div>
-</div> -->
+</div>
 <div class="form-row">
     <div class="form-group col-md-6 mb-0">
         {{ form_fieldfarm_section_3.closest_zip_code|as_crispy_field }}
